fix talks links on small displays

--- a/web/wwwroot/index.css
+++ b/web/wwwroot/index.css
@@ -23,13 +23,9 @@ h1 {
         display: inline-block;
     }
 
-a {
-    white-space: nowrap;
+a:hover, a:focus {
+    text-decoration: none;
 }
-
-    a:hover, a:focus {
-        text-decoration: none;
-    }
 
 img {
     max-width: 100%;
